# Cpp_web_server_demo

./: README.md
C/demo1_socket_webserver/: Makefile  main.cpp  webserver
C/demo2_mq/: client
C/demo3_httplib_rest/: Makefile  main.cpp
Cdemo/demo1_socket_webserver/: README.md
Cdemo/demo2_mq/: Makefile  README.md  client.cpp  server  server.cpp
Cdemo/demo3_httplib_rest/: README.md  main.cpp  rest_server
Cdemo/demo4/: CMakeLists.txt  README.md  test.txt
Cdemo/demo4/include/: protocol.h  utils.h
Cdemo/demo4/src/: client.cpp  server.cpp  utils.cpp
